fix spacing banner about

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -75,7 +75,7 @@ section{
 #section-banner{
     padding: 2rem 0;
     height: 100vh;
-    margin-bottom: 12rem;
+    margin-bottom: 0;
     .banner{
         width: 100%;
         display: flex;
@@ -946,7 +946,7 @@ section{
 
 @media (max-width: 1440px){
     #section-banner{
-        margin: 0 0 4rem 0;
+        margin: 0;
         .banner{
             .banner-ellipse{
                 right: 20rem;
